--- a/app/scss/_burger.scss
+++ b/app/scss/_burger.scss
@@ -9,38 +9,36 @@
 
     &__line {
         position: absolute;
-        left: 50%;
-        margin-left: -20px;
+        left: 25%;
         margin-top: -2px;
         top: 50%;
-        width: 40px;
+        width: 50%;
         height: 4px;
         background-color: $light;
-        border-radius: 10px;
+        border-radius: 10em;
 
         &::before,
         &::after {
             content: '';
             display: block;
             position: absolute;
-            left: 50%;
-            margin-left: -20px;
+            left: 0;
             margin-top: -2px;
             top: 50%;
             width: 100%;
             height: 4px;
             background-color: $light;
-            border-radius: 10px;
+            border-radius: 10em;
             transition: .3s;
         }
 
         &::before {
             transform: translateY(-8px);
-                  }
+        }
 
         &::after {
             transform: translateY(8px);
-                   }
+        }
     }
 
     &.active .burger-btn__line {
@@ -57,10 +55,12 @@
 
     @media (max-width:767px) {
         & {
-            width: 3.74em;
-            height: 3.74em;
+            width: 3em;
+            height: 3em;
             display: block;
-            order: 3;
+            position: absolute;
+            left: 79%;
+            top: 1em;
         }
     }
 }
