--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,13 +17,22 @@
     grid-area: header;
     font-size: 0.875rem;
     position: relative;
+    margin-bottom: 10.2rem;
 
     @media (max-width:1279px) {
         font-size: 1rem;
     }
 
+    @media (max-width:1172px) {
+        margin-bottom: 8rem;
+    }
+
     @media (max-width:1024px) {
         font-size: 1.2rem;
+    }
+
+    @media (max-width:767px) {
+        margin-bottom: 5rem;
     }
 
     &__container {
@@ -37,13 +46,25 @@
             align-items: center;
             margin-left: 2rem;
             margin-right: 2rem;
+        }
 
+        @media (max-width:767px) {
+            flex-direction: column;
         }
 
     }
 
     &__logo {
-        margin-top: -0.4em;
+        @media (max-width:767px) {
+            margin-bottom: 3em;
+        }
+    }
+
+    &__link {
+        @media (max-width:767px) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__link--button {
@@ -56,54 +77,49 @@
         padding: 1.3em 1.9em;
         background-color: #62D0DF;
         border-radius: 50em;
+        min-width: 50%;
     }
 }
 
-@media (max-width:767px) {
-    .menu {
+.menu {
+    @media (max-width:767px) {
         position: absolute;
         bottom: 150%;
         left: 0;
         padding-right: 0;
-        width: 70%;
+        width: 100%;
         height: auto;
         text-align: center;
-
         transition: all .5s;
         right: 19%;
         background-color: #62D0DF;
         color: $light;
         box-shadow: -2px 3px 17px 0px #000;
 
-
         &.active {
             // transform: translate(35px, 257px);
-            bottom: -430%;
+            bottom: -178%;
 
         }
     }
 
-    // .menu.menu--open{
-    //     transform: translateY(35px, 257px); 
-    // }
-}
+    &__list {
+        display: flex;
+        max-width: 19em;
+        padding-top: 0.9em;
 
-.menu__list {
-    display: flex;
-    max-width: 19em;
-    padding-top: 0.9em;
+        @media (max-width:1024px) {
+            max-width: 25em;
+            padding-top: 0;
+        }
 
-    @media (max-width:1024px) {
-        max-width: 25em;
-        padding-top: 0;
+        @media (max-width:767px) {
+            max-width: 100%;
+            flex-direction: column;
+        }
     }
 
-    @media (max-width:767px) {
-        max-width: 100%;
-        flex-direction: column;
-    }
-
-    &-link {
+    &__list-link {
         // font-size: 0.875rem;
         line-height: 1.1;
         color: inherit;
@@ -114,11 +130,15 @@
         @media (max-width:767px) {
             padding-top: 1em;
             display: inline-block;
-            width: 100%;
+            width: 50%;
         }
     }
 
-    &-link--active {
+    // .menu.menu--open{
+    //     transform: translateY(35px, 257px); 
+    // } 
+
+    &__list-link--active {
         position: relative;
 
         &::after {
@@ -136,7 +156,7 @@
         }
     }
 
-    &-item {
+    &__list-item {
         transition: all 0.2s;
 
         &:hover {
@@ -153,7 +173,6 @@
                 padding-top: 2em;
             }
         }
-
     }
 }
 
@@ -179,14 +198,12 @@
         display: grid;
         grid-auto-flow: row;
         grid-template: minmax(4em, auto) minmax(10.4em, auto) minmax(7.5em, auto) 1fr/1fr;
-        margin-top: 10.2rem;
         padding-bottom: 4.7em;
 
         @media (max-width:1172px) {
-            margin-top: 8rem;
             padding-left: 14%;
+            padding-right: 1em;
         }
-
     }
 
     &__slogan {
@@ -209,24 +226,29 @@
     &__links {
         margin-top: 3.9rem;
         display: flex;
-        justify-content: space-between;
-        max-width: 21.1rem;
+
+        @media (max-width:400px) {
+            flex-direction: column;
+        }
     }
 
     &__link {
         line-height: 1.25;
         letter-spacing: 0.1em;
         align-self: start;
+        padding: 0.94em 1.875em;
     }
 
     &__link--who-am-i {
         color: $light;
         background-color: #F9B640;
-        padding: 0.94em 1.875em;
+
+        @media (max-width:400px) {
+            margin-bottom: 1em;
+        }
     }
 
     &__link--what-to-do {
-        padding: 0.94em 1.875em 0.94em 0;
         color: #FAB63E;
     }
 
@@ -245,7 +267,15 @@
             width: 100%;
             transform: initial;
             padding: 0 0 85% 0;
-            margin-top: -25em;
+            margin-top: -40%;
+        }
+
+        @media (max-width:550px) {
+            margin-top: -50%;
+        }
+
+        @media (max-width:400px) {
+            margin-top: -60%;
         }
     }
 
@@ -287,7 +317,6 @@
         margin-left: -11.2rem;
 
         @media (max-width:1172px) {
-            padding-right: 0;
             padding-left: 14%;
             margin-left: 0;
         }
@@ -396,14 +425,6 @@
         padding-left: 4.88rem;
         padding-right: 0.5rem;
 
-        @media (max-width:767px) {
-            padding-top: 8rem;
-        }
-
-        @media (max-width:550px) {
-            padding-top: 5rem;
-        }
-
         @media (max-width:434px) {
             padding-top: 2rem;
         }
@@ -441,6 +462,11 @@
             padding-top: calc(0.72em / 1.5);
         }
 
+        @media (max-width:550px) {
+            font-size: 2rem;
+            padding-top: 0.72em;
+        }
+
         &::before {
             content: '';
             position: absolute;
@@ -461,6 +487,10 @@
             height: 9px;
             border-radius: 50%;
 
+            @media (max-width:550px) {
+                top: 28px;
+            }
+
             @media (max-width:767px) {
                 width: calc(9px * 1.5);
                 height: calc(9px * 1.5);
@@ -470,7 +500,7 @@
     }
 
     &__items--big {
-  @media (min-width:768px) {
+        @media (min-width:768px) {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
         }
@@ -479,7 +509,7 @@
             grid-template-columns: repeat(3, 1fr);
         }
 
-      
+
     }
 
     &__item--big {
@@ -487,18 +517,13 @@
         padding-left: 6.5rem;
         padding-right: 2rem;
 
-        @media (max-width:1024px){
+        @media (max-width:1024px) {
             padding-top: 4.5rem;
         }
 
         @media (max-width:767px) {
-            padding-top: 8rem;
             padding-left: 4.88rem;
             padding-right: 0.5rem;
-
-            @media (max-width:550px) {
-                padding-top: 5rem;
-            }
 
             @media (max-width:434px) {
                 padding-top: 2rem;
@@ -542,8 +567,8 @@
         width: 100%;
         position: relative;
 
-        @media (max-width:767px) {
-            padding-top: calc(0.94em / 1.5);
+        @media (max-width:550px) {
+            padding-top: 0.72em;
         }
     }
 
@@ -568,6 +593,9 @@
             height: 12px;
             border-radius: 50%;
 
+            @media (max-width:550px) {
+                top: 28px;
+            }
 
             @media (max-width:1024px) {
                 width: calc(9px * 1.5);
@@ -578,14 +606,15 @@
     }
 
     &__cards {
-  @media (min-width:767px) {
+        @media (min-width:767px) {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);           
+            grid-template-columns: repeat(2, 1fr);
         }
-        @media (min-width:1024px){
+
+        @media (min-width:1024px) {
             grid-template-columns: repeat(3, 1fr);
-        margin-bottom: 2.8%;
-        }       
+            margin-bottom: 2.8%;
+        }
     }
 
     &__card {
